web/css/maze.css
body{
  background: #ebebeb;
}

.miniature{
  margin: auto;
  vertical-align: middle;
}

.miniature-container{
  display: table;
  width:190px;
  margin:2px;
  text-align:center;
  height:150px;
  vertical-align: middle;
}


#canvas{
  margin: 30px;
}

.maze-row{
  margin:0;
  padding:0;
  font-size: 0;
}

.maze > .maze-row span{
  margin:1px;
  vertical-align:middle;
  padding:0;
  display: inline-block;
  background:red;
  font-size:10px;
  color: #555;
  border-radius:30%;
  -webkit-box-shadow:inset 1px 1px 1px 1px #AEAEAE;
  box-shadow: 1px 1px 1px 1px #ABABAB;
  -webkit-transform-style: preserve-3d;

}

#miniatures-section  span{
  margin:0px !important;
  border-radius:10%;
  -webkit-box-shadow:inset 1px 1px 1px 1px #AEAEAE;
  box-shadow: 1px 1px 1px 1px #ABABAB;
}

.maze-row span i{
  font-size:14px;
  color:#fff;
  width:100%;
  text-align:center;
  vertical-align:middle;
  padding-top: 2px;
}

.maze-row span.cell_wall i{
  color:green;
}

.maze-row span.cell_wall i.fa-square{
  opacity: 0.8;
  color:#444;
}

#miniatures-section i{
  display:none;
  font-size: 0px;
}

span.cell_path{
  border-radius:50%;
  -webkit-box-shadow: 2px 2px 2px 2px #9A9A9A;
  box-shadow: 2px 2px 2px 2px #ABABAB;
}

span.cell_wall{
  -webkit-box-shadow: 1px 1px 1px 1px #333;
  box-shadow: 1px 1px 1px 1px #444;
}


.selectpicker{
  width:300px;
}

#miniatures-section{
  margin-top:50px;
}



.rotateforever {
    -webkit-animation: rotation 5s infinite linear;
}

@-webkit-keyframes rotation {
    from {-webkit-transform: rotate(0deg);}
    to   {-webkit-transform: rotate(359deg);}
}


.translatetree {
    -webkit-animation: translateT 2s infinite linear;
}

@-webkit-keyframes translateT {
    from {-webkit-transform: translate(-10,0);}
    to   {-webkit-transform: translate(10),1em;}
}


.scaleeforever {
    -webkit-animation: scaleF 1s infinite linear;
}

@-webkit-keyframes scaleF {
    from {-webkit-transform: scale(1.2);}
    to   {-webkit-transform: scale(0.8);}
}

